C2 SuperWord: wrong result, load should not be moved before store if not comparable

XMLWordPrintable

    • b18

        ./java -XX:CompileCommand=compileonly,Test25::test25 -XX:CompileCommand=printcompilation,Test25::test* -XX:LoopUnrollLimit=100 -Xbatch -XX:-TraceSuperWord -XX:+StressLCM -XX:+TraceNewVectors -XX:+TraceLoopOpts -XX:LoopMaxUnroll=8 Test25.java

        Exception in thread "main" java.lang.RuntimeException: bad a
        at Test25.verify(Test25.java:40)
        at Test25.main(Test25.java:26)

        Found this bug when inspecting code change made in JDK-8052081:
        https://github.com/openjdk/jdk/commit/7764490363a5963212e040baa2b79946cf4487bf

              Assignee:
              Emanuel Peter
              Reporter:
              Emanuel Peter
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: