8316679: C2 SuperWord: wrong result, load should not be moved before store if not comparable